--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
+  firebase_core: ^3.13.1
+  cloud_firestore: ^5.6.8
 
 dev_dependencies:
   flutter_test:
