--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.20.2
   firebase_core: ^3.13.1
   cloud_firestore: ^5.6.8
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
